tests/expectations/compiler/function/duplicate_parameter_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ['''
Error [EPAR0370032]: `console` statements are not yet supported.
    --> compiler-test:5:9
     |
   5 |         console.log("{}", 1u8);
     |         ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.''']
